<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/settings_info">
        <EditTextPreference
            android:title="@string/settings_info_label"
            android:summary="@string/settings_info_label"
            android:key="BS" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_settings_bihapi_login">
        <EditTextPreference
            android:title="@string/preference_settings_bihapi_login_label"
            android:summary="@string/preference_settings_bihapi_login_label"
            android:key="BL" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_settings_bihapi_password">
        <EditTextPreference
            android:title="@string/preference_settings_bihapi_password_label"
            android:summary="@string/preference_settings_bihapi_password_label"
            android:key="BP" />
    </PreferenceCategory>
</PreferenceScreen>