<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/settings_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="20dp"
        android:editable="false"
        android:gravity="center_horizontal"
        android:text="@string/settings_info"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_http"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:editable="true"
        android:gravity="center_horizontal"
        android:hint="@string/settings_info"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/settings_bihapi_login_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:editable="false"
        android:gravity="center_horizontal"
        android:text="@string/settings_bihapi_login_info"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_bihapi_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:editable="true"
        android:gravity="center_horizontal"
        android:hint="@string/preference_settings_bihapi_login"
        android:inputType="numberDecimal"
        android:maxLength="11"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/settings_bihapi_password_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:editable="false"
        android:gravity="center_horizontal"
        android:text="@string/settings_bihapi_password_info"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/settings_bihapi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/white"
        android:editable="true"
        android:gravity="center_horizontal"
        android:hint="@string/preference_settings_bihapi_password"
        android:textColor="@color/black" />

</LinearLayout>